// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user translation should redirect if user has language but not langue in url + snap view without content 1`] = `
.c1 {
  font-weight: bold;
  font-size: 27.7097px;
  line-height: 35px;
  margin-bottom: 40px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  width: 1040px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 32px;
  line-height: 40px;
  color: #5e5e5e;
  margin-top: 60px;
  margin-bottom: 20px;
}

.c4 {
  font-size: 18px;
  line-height: 23px;
  color: #5e5e5e;
  margin-bottom: 40px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 60px;
}

<div
  className="main"
>
  <div
    className="container"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        Vous n'avez pas traduit de fiches pour le moment.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Vous parlez une autre langue ?
        </div>
        <div
          className="c4"
        >
          Aidez à traduire les contenus à votre rythme.
        </div>
        <div
          className="c5"
        >
          <button
            className="btn dark me-2"
            onClick={[Function]}
          >
            <img
              alt="a"
              data-nimg="1"
              decoding="async"
              height={21}
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
              srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
              style={
                {
                  "color": "transparent",
                }
              }
              width={21}
            />
            Commencer à traduire
          </button>
          <button
            className="btn tuto ms-2"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-video-outline" fill="#fff"><g data-name="Layer 2"><g data-name="video"><rect width="24" height="24" opacity="0"/><path d="M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15zM15 16a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1zm5-1.4L17.19 12 20 9.4z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Explications
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user translation should redirect if user has no language but langue in url + snap no langue 1`] = `
.c1 {
  font-weight: bold;
  font-size: 27.7097px;
  line-height: 35px;
  margin-bottom: 40px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  width: 1040px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 32px;
  line-height: 40px;
  color: #5e5e5e;
  margin-top: 60px;
  margin-bottom: 20px;
}

.c4 {
  font-size: 18px;
  line-height: 23px;
  color: #5e5e5e;
  margin-bottom: 40px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 60px;
}

<div
  className="main"
>
  <div
    className="container"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        Vous n'avez pas traduit de fiches pour le moment.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Vous parlez une autre langue ?
        </div>
        <div
          className="c4"
        >
          Aidez à traduire les contenus à votre rythme.
        </div>
        <div
          className="c5"
        >
          <button
            className="btn dark me-2"
            onClick={[Function]}
          >
            <img
              alt="a"
              data-nimg="1"
              decoding="async"
              height={21}
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
              srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
              style={
                {
                  "color": "transparent",
                }
              }
              width={21}
            />
            Commencer à traduire
          </button>
          <button
            className="btn tuto ms-2"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-video-outline" fill="#fff"><g data-name="Layer 2"><g data-name="video"><rect width="24" height="24" opacity="0"/><path d="M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15zM15 16a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1zm5-1.4L17.19 12 20 9.4z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Explications
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user translation should render correctly with expert, admin 1`] = `
.c5 {
  color: #B50437;
  background-color: #ffffff;
}

.c5:hover {
  background-color: inherit !important;
}

.c6 {
  color: #0A54BF;
  background-color: #ffffff;
}

.c6:hover {
  background-color: inherit !important;
}

.c7 {
  color: #ffffff;
  background-color: #EA6206;
}

.c7:hover {
  background-color: lightTextMentionGrey !important;
}

.c8 {
  color: #137F3A;
  background-color: #ffffff;
}

.c8:hover {
  background-color: inherit !important;
}

.c9 {
  color: #ffffff;
  background-color: #212121;
}

.c9:hover {
  background-color: lightTextMentionGrey !important;
}

.c10 {
  color: #212121;
  background-color: #ffffff;
}

.c10:hover {
  background-color: inherit !important;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: bold;
  cursor: pointer;
}

.c11 {
  background: #ffffff;
  border-radius: 12px;
  padding: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 26px 12px 26px 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  font-weight: bold;
  color: #5e5e5e;
  margin-right: 8px;
}

<div
  className="main"
>
  <div
    className="container"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        />
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            Vous avez traduit 0 mots pendant 0 minutes.
          </div>
          <button
            className="btn tuto me-2"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-video-outline" fill="#fff"><g data-name="Layer 2"><g data-name="video"><rect width="24" height="24" opacity="0"/><path d="M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15zM15 16a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1zm5-1.4L17.19 12 20 9.4z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Explications
          </button>
          <button
            className="btn dark"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-settings-2-outline" fill="#fff"><g data-name="Layer 2"><g data-name="settings-2"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><path d="M12.94 22h-1.89a1.68 1.68 0 0 1-1.68-1.68v-1.09a.34.34 0 0 0-.22-.29.38.38 0 0 0-.41 0l-.74.8a1.67 1.67 0 0 1-2.37 0L4.26 18.4a1.66 1.66 0 0 1-.5-1.19 1.72 1.72 0 0 1 .5-1.21l.74-.74a.34.34 0 0 0 0-.37c-.06-.15-.16-.26-.3-.26H3.68A1.69 1.69 0 0 1 2 12.94v-1.89a1.68 1.68 0 0 1 1.68-1.68h1.09a.34.34 0 0 0 .29-.22.38.38 0 0 0 0-.41L4.26 8a1.67 1.67 0 0 1 0-2.37L5.6 4.26a1.65 1.65 0 0 1 1.18-.5 1.72 1.72 0 0 1 1.22.5l.74.74a.34.34 0 0 0 .37 0c.15-.06.26-.16.26-.3V3.68A1.69 1.69 0 0 1 11.06 2H13a1.68 1.68 0 0 1 1.68 1.68v1.09a.34.34 0 0 0 .22.29.38.38 0 0 0 .41 0l.69-.8a1.67 1.67 0 0 1 2.37 0l1.37 1.34a1.67 1.67 0 0 1 .5 1.19 1.63 1.63 0 0 1-.5 1.21l-.74.74a.34.34 0 0 0 0 .37c.06.15.16.26.3.26h1.09A1.69 1.69 0 0 1 22 11.06V13a1.68 1.68 0 0 1-1.68 1.68h-1.09a.34.34 0 0 0-.29.22.34.34 0 0 0 0 .37l.77.77a1.67 1.67 0 0 1 0 2.37l-1.31 1.33a1.65 1.65 0 0 1-1.18.5 1.72 1.72 0 0 1-1.19-.5l-.77-.74a.34.34 0 0 0-.37 0c-.15.06-.26.16-.26.3v1.09A1.69 1.69 0 0 1 12.94 22zm-1.57-2h1.26v-.77a2.33 2.33 0 0 1 1.46-2.14 2.36 2.36 0 0 1 2.59.47l.54.54.88-.88-.54-.55a2.34 2.34 0 0 1-.48-2.56 2.33 2.33 0 0 1 2.14-1.45H20v-1.29h-.77a2.33 2.33 0 0 1-2.14-1.46 2.36 2.36 0 0 1 .47-2.59l.54-.54-.88-.88-.55.54a2.39 2.39 0 0 1-4-1.67V4h-1.3v.77a2.33 2.33 0 0 1-1.46 2.14 2.36 2.36 0 0 1-2.59-.47l-.54-.54-.88.88.54.55a2.39 2.39 0 0 1-1.67 4H4v1.26h.77a2.33 2.33 0 0 1 2.14 1.46 2.36 2.36 0 0 1-.47 2.59l-.54.54.88.88.55-.54a2.39 2.39 0 0 1 4 1.67z" data-name="&lt;Group&gt;"/><path d="M12 15.5a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5zm0-5a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0-1.5-1.5z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Mes langues
          </button>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          className="c2"
        >
          <button
            className="c5 filter"
            color="#B50437"
            onClick={[Function]}
          >
            À revoir (0)
          </button>
          <button
            className="c6 filter"
            color="#0A54BF"
            onClick={[Function]}
          >
            À traduire (0)
          </button>
          <button
            className="c7 filter"
            color="#EA6206"
            onClick={[Function]}
          >
            À valider (0)
          </button>
          <button
            className="c8 filter"
            color="#137F3A"
            onClick={[Function]}
          >
            Publiées (0)
          </button>
          <button
            className="c9 filter"
            color="#212121"
            onClick={[Function]}
          >
            Dispositifs (0)
          </button>
          <button
            className="c10 filter"
            color="#212121"
            onClick={[Function]}
          >
            Démarches (0)
          </button>
        </div>
        <div
          className="c2"
        >
          <button
            className="c10 filter"
            color="#212121"
            onClick={[Function]}
          >
            Besoins (0)
          </button>
          <div
            className="container no_margin"
          >
            <input
              className="input form-control-plaintext"
              onChange={[Function]}
              placeholder="Rechercher..."
              type="text"
              value=""
            />
            <span
              className="icon"
              id="bookmarkBtn"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" class="eva eva-search-outline" fill="#212121"><g data-name="Layer 2"><g data-name="search"><rect width="24" height="24" opacity="0"/><path d="M20.71 19.29l-3.4-3.39A7.92 7.92 0 0 0 19 11a8 8 0 1 0-8 8 7.92 7.92 0 0 0 4.9-1.69l3.39 3.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 11a6 6 0 1 1 6 6 6 6 0 0 1-6-6z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "24px",
                    "lineHeight": "24px",
                  }
                }
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="table-responsive"
        >
          <table
            className="avancement-table table table-borderless"
          >
            <thead>
              <tr>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Type
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Titre
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Progression
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Validation
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Mots
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Depuis
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Statut
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Dernière trad
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user translation should render correctly with expert, non admin 1`] = `
.c5 {
  color: #B50437;
  background-color: #ffffff;
}

.c5:hover {
  background-color: inherit !important;
}

.c6 {
  color: #0A54BF;
  background-color: #ffffff;
}

.c6:hover {
  background-color: inherit !important;
}

.c7 {
  color: #ffffff;
  background-color: #EA6206;
}

.c7:hover {
  background-color: lightTextMentionGrey !important;
}

.c8 {
  color: #137F3A;
  background-color: #ffffff;
}

.c8:hover {
  background-color: inherit !important;
}

.c9 {
  color: #ffffff;
  background-color: #212121;
}

.c9:hover {
  background-color: lightTextMentionGrey !important;
}

.c10 {
  color: #212121;
  background-color: #ffffff;
}

.c10:hover {
  background-color: inherit !important;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: bold;
  cursor: pointer;
}

.c11 {
  background: #ffffff;
  border-radius: 12px;
  padding: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 26px 12px 26px 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  font-weight: bold;
  color: #5e5e5e;
  margin-right: 8px;
}

<div
  className="main"
>
  <div
    className="container"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        />
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            Vous avez traduit 0 mots pendant 0 minutes.
          </div>
          <button
            className="btn tuto me-2"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-video-outline" fill="#fff"><g data-name="Layer 2"><g data-name="video"><rect width="24" height="24" opacity="0"/><path d="M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15zM15 16a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1zm5-1.4L17.19 12 20 9.4z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Explications
          </button>
          <button
            className="btn dark"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-settings-2-outline" fill="#fff"><g data-name="Layer 2"><g data-name="settings-2"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><path d="M12.94 22h-1.89a1.68 1.68 0 0 1-1.68-1.68v-1.09a.34.34 0 0 0-.22-.29.38.38 0 0 0-.41 0l-.74.8a1.67 1.67 0 0 1-2.37 0L4.26 18.4a1.66 1.66 0 0 1-.5-1.19 1.72 1.72 0 0 1 .5-1.21l.74-.74a.34.34 0 0 0 0-.37c-.06-.15-.16-.26-.3-.26H3.68A1.69 1.69 0 0 1 2 12.94v-1.89a1.68 1.68 0 0 1 1.68-1.68h1.09a.34.34 0 0 0 .29-.22.38.38 0 0 0 0-.41L4.26 8a1.67 1.67 0 0 1 0-2.37L5.6 4.26a1.65 1.65 0 0 1 1.18-.5 1.72 1.72 0 0 1 1.22.5l.74.74a.34.34 0 0 0 .37 0c.15-.06.26-.16.26-.3V3.68A1.69 1.69 0 0 1 11.06 2H13a1.68 1.68 0 0 1 1.68 1.68v1.09a.34.34 0 0 0 .22.29.38.38 0 0 0 .41 0l.69-.8a1.67 1.67 0 0 1 2.37 0l1.37 1.34a1.67 1.67 0 0 1 .5 1.19 1.63 1.63 0 0 1-.5 1.21l-.74.74a.34.34 0 0 0 0 .37c.06.15.16.26.3.26h1.09A1.69 1.69 0 0 1 22 11.06V13a1.68 1.68 0 0 1-1.68 1.68h-1.09a.34.34 0 0 0-.29.22.34.34 0 0 0 0 .37l.77.77a1.67 1.67 0 0 1 0 2.37l-1.31 1.33a1.65 1.65 0 0 1-1.18.5 1.72 1.72 0 0 1-1.19-.5l-.77-.74a.34.34 0 0 0-.37 0c-.15.06-.26.16-.26.3v1.09A1.69 1.69 0 0 1 12.94 22zm-1.57-2h1.26v-.77a2.33 2.33 0 0 1 1.46-2.14 2.36 2.36 0 0 1 2.59.47l.54.54.88-.88-.54-.55a2.34 2.34 0 0 1-.48-2.56 2.33 2.33 0 0 1 2.14-1.45H20v-1.29h-.77a2.33 2.33 0 0 1-2.14-1.46 2.36 2.36 0 0 1 .47-2.59l.54-.54-.88-.88-.55.54a2.39 2.39 0 0 1-4-1.67V4h-1.3v.77a2.33 2.33 0 0 1-1.46 2.14 2.36 2.36 0 0 1-2.59-.47l-.54-.54-.88.88.54.55a2.39 2.39 0 0 1-1.67 4H4v1.26h.77a2.33 2.33 0 0 1 2.14 1.46 2.36 2.36 0 0 1-.47 2.59l-.54.54.88.88.55-.54a2.39 2.39 0 0 1 4 1.67z" data-name="&lt;Group&gt;"/><path d="M12 15.5a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5zm0-5a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0-1.5-1.5z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Mes langues
          </button>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          className="c2"
        >
          <button
            className="c5 filter"
            color="#B50437"
            onClick={[Function]}
          >
            À revoir (0)
          </button>
          <button
            className="c6 filter"
            color="#0A54BF"
            onClick={[Function]}
          >
            À traduire (0)
          </button>
          <button
            className="c7 filter"
            color="#EA6206"
            onClick={[Function]}
          >
            À valider (0)
          </button>
          <button
            className="c8 filter"
            color="#137F3A"
            onClick={[Function]}
          >
            Publiées (0)
          </button>
          <button
            className="c9 filter"
            color="#212121"
            onClick={[Function]}
          >
            Dispositifs (0)
          </button>
          <button
            className="c10 filter"
            color="#212121"
            onClick={[Function]}
          >
            Démarches (0)
          </button>
        </div>
        <div
          className="c2"
        >
          <button
            className="c10 filter"
            color="#212121"
            onClick={[Function]}
          >
            Besoins (0)
          </button>
          <div
            className="container no_margin"
          >
            <input
              className="input form-control-plaintext"
              onChange={[Function]}
              placeholder="Rechercher..."
              type="text"
              value=""
            />
            <span
              className="icon"
              id="bookmarkBtn"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" class="eva eva-search-outline" fill="#212121"><g data-name="Layer 2"><g data-name="search"><rect width="24" height="24" opacity="0"/><path d="M20.71 19.29l-3.4-3.39A7.92 7.92 0 0 0 19 11a8 8 0 1 0-8 8 7.92 7.92 0 0 0 4.9-1.69l3.39 3.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 11a6 6 0 1 1 6 6 6 6 0 0 1-6-6z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "24px",
                    "lineHeight": "24px",
                  }
                }
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="table-responsive"
        >
          <table
            className="avancement-table table table-borderless"
          >
            <thead>
              <tr>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Type
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Titre
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Progression
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Validation
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Mots
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Depuis
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Statut
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c12"
                    order={1}
                  >
                    Dernière trad
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user translation should render correctly with non expert, non admin 1`] = `
.c5 {
  color: #ffffff;
  background-color: #0A54BF;
}

.c5:hover {
  background-color: lightTextMentionGrey !important;
}

.c6 {
  color: #137F3A;
  background-color: #ffffff;
}

.c6:hover {
  background-color: inherit !important;
}

.c7 {
  color: #ffffff;
  background-color: #212121;
}

.c7:hover {
  background-color: lightTextMentionGrey !important;
}

.c8 {
  color: #212121;
  background-color: #ffffff;
}

.c8:hover {
  background-color: inherit !important;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: bold;
  cursor: pointer;
}

.c9 {
  background: #ffffff;
  border-radius: 12px;
  padding: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 26px 12px 26px 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  font-weight: bold;
  color: #5e5e5e;
  margin-right: 8px;
}

<div
  className="main"
>
  <div
    className="container"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        />
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            Vous avez traduit 0 mots pendant 0 minutes.
          </div>
          <button
            className="btn tuto me-2"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-video-outline" fill="#fff"><g data-name="Layer 2"><g data-name="video"><rect width="24" height="24" opacity="0"/><path d="M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15zM15 16a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1zm5-1.4L17.19 12 20 9.4z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Explications
          </button>
          <button
            className="btn dark"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-settings-2-outline" fill="#fff"><g data-name="Layer 2"><g data-name="settings-2"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><path d="M12.94 22h-1.89a1.68 1.68 0 0 1-1.68-1.68v-1.09a.34.34 0 0 0-.22-.29.38.38 0 0 0-.41 0l-.74.8a1.67 1.67 0 0 1-2.37 0L4.26 18.4a1.66 1.66 0 0 1-.5-1.19 1.72 1.72 0 0 1 .5-1.21l.74-.74a.34.34 0 0 0 0-.37c-.06-.15-.16-.26-.3-.26H3.68A1.69 1.69 0 0 1 2 12.94v-1.89a1.68 1.68 0 0 1 1.68-1.68h1.09a.34.34 0 0 0 .29-.22.38.38 0 0 0 0-.41L4.26 8a1.67 1.67 0 0 1 0-2.37L5.6 4.26a1.65 1.65 0 0 1 1.18-.5 1.72 1.72 0 0 1 1.22.5l.74.74a.34.34 0 0 0 .37 0c.15-.06.26-.16.26-.3V3.68A1.69 1.69 0 0 1 11.06 2H13a1.68 1.68 0 0 1 1.68 1.68v1.09a.34.34 0 0 0 .22.29.38.38 0 0 0 .41 0l.69-.8a1.67 1.67 0 0 1 2.37 0l1.37 1.34a1.67 1.67 0 0 1 .5 1.19 1.63 1.63 0 0 1-.5 1.21l-.74.74a.34.34 0 0 0 0 .37c.06.15.16.26.3.26h1.09A1.69 1.69 0 0 1 22 11.06V13a1.68 1.68 0 0 1-1.68 1.68h-1.09a.34.34 0 0 0-.29.22.34.34 0 0 0 0 .37l.77.77a1.67 1.67 0 0 1 0 2.37l-1.31 1.33a1.65 1.65 0 0 1-1.18.5 1.72 1.72 0 0 1-1.19-.5l-.77-.74a.34.34 0 0 0-.37 0c-.15.06-.26.16-.26.3v1.09A1.69 1.69 0 0 1 12.94 22zm-1.57-2h1.26v-.77a2.33 2.33 0 0 1 1.46-2.14 2.36 2.36 0 0 1 2.59.47l.54.54.88-.88-.54-.55a2.34 2.34 0 0 1-.48-2.56 2.33 2.33 0 0 1 2.14-1.45H20v-1.29h-.77a2.33 2.33 0 0 1-2.14-1.46 2.36 2.36 0 0 1 .47-2.59l.54-.54-.88-.88-.55.54a2.39 2.39 0 0 1-4-1.67V4h-1.3v.77a2.33 2.33 0 0 1-1.46 2.14 2.36 2.36 0 0 1-2.59-.47l-.54-.54-.88.88.54.55a2.39 2.39 0 0 1-1.67 4H4v1.26h.77a2.33 2.33 0 0 1 2.14 1.46 2.36 2.36 0 0 1-.47 2.59l-.54.54.88.88.55-.54a2.39 2.39 0 0 1 4 1.67z" data-name="&lt;Group&gt;"/><path d="M12 15.5a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5zm0-5a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0-1.5-1.5z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Mes langues
          </button>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          className="c2"
        >
          <button
            className="c5 filter"
            color="#0A54BF"
            onClick={[Function]}
          >
            À traduire (0)
          </button>
          <button
            className="c6 filter"
            color="#137F3A"
            onClick={[Function]}
          >
            Publiées (0)
          </button>
          <button
            className="c7 filter"
            color="#212121"
            onClick={[Function]}
          >
            Dispositifs (0)
          </button>
          <button
            className="c8 filter"
            color="#212121"
            onClick={[Function]}
          >
            Démarches (0)
          </button>
        </div>
        <div
          className="c2"
        >
          <div
            className="container no_margin"
          >
            <input
              className="input form-control-plaintext"
              onChange={[Function]}
              placeholder="Rechercher..."
              type="text"
              value=""
            />
            <span
              className="icon"
              id="bookmarkBtn"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" class="eva eva-search-outline" fill="#212121"><g data-name="Layer 2"><g data-name="search"><rect width="24" height="24" opacity="0"/><path d="M20.71 19.29l-3.4-3.39A7.92 7.92 0 0 0 19 11a8 8 0 1 0-8 8 7.92 7.92 0 0 0 4.9-1.69l3.39 3.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 11a6 6 0 1 1 6 6 6 6 0 0 1-6-6z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "24px",
                    "lineHeight": "24px",
                  }
                }
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <div
          className="table-responsive"
        >
          <table
            className="avancement-table table table-borderless"
          >
            <thead>
              <tr>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Type
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Titre
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Progression
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Mots
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Depuis
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Statut
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
                <th
                  onClick={[Function]}
                >
                  <div
                    className="c10"
                    order={1}
                  >
                    Dernière trad
                    <span
                      className="icon"
                    >
                      <i
                        dangerouslySetInnerHTML={
                          {
                            "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-chevron-down" fill="#212121"><g data-name="Layer 2"><g data-name="chevron-down"><rect width="24" height="24" opacity="0"/><path d="M12 15.5a1 1 0 0 1-.71-.29l-4-4a1 1 0 1 1 1.42-1.42L12 13.1l3.3-3.18a1 1 0 1 1 1.38 1.44l-4 3.86a1 1 0 0 1-.68.28z"/></g></g></svg>",
                          }
                        }
                        style={
                          {
                            "height": "20px",
                            "lineHeight": "20px",
                          }
                        }
                      />
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user translation should return loader langue in url = first selected langue 1`] = `
.c1 {
  font-weight: bold;
  font-size: 27.7097px;
  line-height: 35px;
  margin-bottom: 40px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  width: 1040px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 32px;
  line-height: 40px;
  color: #5e5e5e;
  margin-top: 60px;
  margin-bottom: 20px;
}

.c4 {
  font-size: 18px;
  line-height: 23px;
  color: #5e5e5e;
  margin-bottom: 40px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 60px;
}

<div
  className="main"
>
  <div
    className="container"
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        Vous n'avez pas traduit de fiches pour le moment.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Vous parlez une autre langue ?
        </div>
        <div
          className="c4"
        >
          Aidez à traduire les contenus à votre rythme.
        </div>
        <div
          className="c5"
        >
          <button
            className="btn dark me-2"
            onClick={[Function]}
          >
            <img
              alt="a"
              data-nimg="1"
              decoding="async"
              height={21}
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
              srcSet="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
              style={
                {
                  "color": "transparent",
                }
              }
              width={21}
            />
            Commencer à traduire
          </button>
          <button
            className="btn tuto ms-2"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-video-outline" fill="#fff"><g data-name="Layer 2"><g data-name="video"><rect width="24" height="24" opacity="0"/><path d="M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15zM15 16a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1zm5-1.4L17.19 12 20 9.4z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Explications
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
